// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useNFT loads all auctions 1`] = `
Array [
  Object {
    "approved": true,
    "auctionCurrency": Object {
      "decimals": 18,
      "id": "0xFACE",
      "name": "Wrapped Ether",
      "symbol": "WETH",
    },
    "createdAtTimestamp": "12974",
    "curator": Object {
      "id": "10",
    },
    "curatorFeePercentage": 10000,
    "currentBid": Object {
      "amount": "12974",
      "bidType": "Final",
      "bidder": Object {
        "id": "10",
      },
      "createdAtTimestamp": "12974",
    },
    "duration": "12974",
    "expectedEndTimestamp": "12974",
    "finalizedAtTimestamp": "12974",
    "firstBidTime": "12974",
    "id": "0",
    "previousBids": Array [
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "3",
      },
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "4",
      },
    ],
    "reservePrice": "12974",
    "status": "Active",
    "tokenId": 0,
    "tokenOwner": Object {
      "id": "10",
    },
  },
  Object {
    "approved": true,
    "auctionCurrency": Object {
      "decimals": 18,
      "id": "0xFACE",
      "name": "Wrapped Ether",
      "symbol": "WETH",
    },
    "createdAtTimestamp": "12974",
    "curator": Object {
      "id": "10",
    },
    "curatorFeePercentage": 10000,
    "currentBid": Object {
      "amount": "12974",
      "bidType": "Final",
      "bidder": Object {
        "id": "10",
      },
      "createdAtTimestamp": "12974",
    },
    "duration": "12974",
    "expectedEndTimestamp": "12974",
    "finalizedAtTimestamp": "12974",
    "firstBidTime": "12974",
    "id": "1",
    "previousBids": Array [
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "6",
      },
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "7",
      },
    ],
    "reservePrice": "12974",
    "status": "Active",
    "tokenId": 1,
    "tokenOwner": Object {
      "id": "10",
    },
  },
]
`;

exports[`useNFT loads specific auctions for a given curator 1`] = `
Array [
  Object {
    "approved": true,
    "auctionCurrency": Object {
      "decimals": 18,
      "id": "0xFACE",
      "name": "Wrapped Ether",
      "symbol": "WETH",
    },
    "createdAtTimestamp": "12974",
    "curator": Object {
      "id": "10",
    },
    "curatorFeePercentage": 10000,
    "currentBid": Object {
      "amount": "12974",
      "bidType": "Final",
      "bidder": Object {
        "id": "10",
      },
      "createdAtTimestamp": "12974",
    },
    "duration": "12974",
    "expectedEndTimestamp": "12974",
    "finalizedAtTimestamp": "12974",
    "firstBidTime": "12974",
    "id": "8",
    "previousBids": Array [
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "11",
      },
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "12",
      },
    ],
    "reservePrice": "12974",
    "status": "Active",
    "tokenId": 2,
    "tokenOwner": Object {
      "id": "10",
    },
  },
  Object {
    "approved": true,
    "auctionCurrency": Object {
      "decimals": 18,
      "id": "0xFACE",
      "name": "Wrapped Ether",
      "symbol": "WETH",
    },
    "createdAtTimestamp": "12974",
    "curator": Object {
      "id": "10",
    },
    "curatorFeePercentage": 10000,
    "currentBid": Object {
      "amount": "12974",
      "bidType": "Final",
      "bidder": Object {
        "id": "10",
      },
      "createdAtTimestamp": "12974",
    },
    "duration": "12974",
    "expectedEndTimestamp": "12974",
    "finalizedAtTimestamp": "12974",
    "firstBidTime": "12974",
    "id": "9",
    "previousBids": Array [
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "14",
      },
      Object {
        "amount": "12974",
        "bidInactivatedAtBlockNumber": "12974",
        "bidInactivatedAtTimestamp": "12974",
        "bidType": "Final",
        "bidder": Object {
          "id": "10",
        },
        "createdAtTimestamp": "12974",
        "id": "15",
      },
    ],
    "reservePrice": "12974",
    "status": "Active",
    "tokenId": 3,
    "tokenOwner": Object {
      "id": "10",
    },
  },
]
`;
